--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.9'
 
 services:
-  app:
+  backend:
     build:
-      context: .
-    container_name: userservice  
+      context: backend
+    container_name: backend  
     ports:
       - "8089:8089"
     depends_on:
@@ -12,11 +12,22 @@ services:
     networks:
         - local-network  
     restart: always
+  frontend:
+    build:
+      context: frontend
+    container_name: frontend  
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    networks:
+        - local-network  
+    restart: always    
   mongo:
       image: mongo:noble
       container_name: mongodb
       env_file:
-      - .env
+      - backend/.env
       ports:
         - "27017:27017"
       #environment:
