--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,10 @@ services:
       - backend/.env
       ports:
         - "27017:27017"
-      #environment:
-        #MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
-        #MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PWD}
-        #MONGO_INITDB_DATABASE: ${MONGODB_DATABASE}
+      environment:
+        MONGO_INITDB_ROOT_USERNAME: ${MONGODB_USERNAME}
+        MONGO_INITDB_ROOT_PASSWORD: ${MONGODB_PWD}
+        MONGO_INITDB_DATABASE: ${MONGODB_DATABASE}
       volumes:
         - mongo-data:/data/db
       networks:
