--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,4 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Build docker-compose
-        run: docker-compose -f docker-compose.yml
+        uses: addnab/docker-run-action@v3
+        with:
+          image: docker/compose:latest
+          options: -v ${{ github.workspace }}:/var/www
+          run: docker-compose -f docker-compose.yml
+        
