fix(ci/cd): nomear etapa de checkout

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,11 +12,14 @@ jobs:
       MONGODB_DATABASE: ${{ secrets.MONDO_DATABASE }}
 
     steps:
+      - name: Checkout repo files
       - uses: actions/checkout@v4
       - name: Build docker-compose
         uses: addnab/docker-run-action@v3
         with:
           image: docker/compose:latest
           options: -v ${{ github.workspace }}:/var/www
-          run: docker-compose -f docker-compose.yml
+          run: |
+            docker-compose -f ./docker-compose.yml
+      
         
